Browser support  and fixing flexbox gap in safari

--- a/Omnifood/css/responsive.css
+++ b/Omnifood/css/responsive.css
@@ -130,7 +130,10 @@ em=current font size
   }
   /* working on main-nav */
   .main-nav {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.9);
+    /* backdrop filter */
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     /* 1: when we position an element absolutely, we first have to make the parent element relative */
     position: absolute;
     top: 0;
@@ -296,5 +299,60 @@ em=current font size
 
   .cta-text-box {
     padding: 3.2rem;
+  }
+}
+
+/* added below css code to  this css file for flexbox-gap property fix across safari and browsers */
+
+/* ********************
+FIXING SAFARI FLEXBOX GAP
+**********************/
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
   }
 }
